# synthesizer-grids

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: python-app.yml
cloudy/: create_cloudy_input_grid.py  utils.py
cloudy/params/: c17.03-blr.yaml  c17.03-comprehensive.yaml  c17.03-limited.yaml  c17.03-sps-dust_to_metal.yaml  c17.03-sps-ionisation_parameter.yaml  c17.03-sps-no_grains.yaml  c17.03-sps-radius.yaml  c23.01-sps.yaml
create_grids/: grid_io.py  grid_utils.py  io.py
create_grids/cloudy/: create_cloudy_input_grid.py  create_cloudy_input_grid_from_cloudy.py  create_cloudy_input_grid_from_cloudy_OLD.py  create_synthesizer_grid.py
create_grids/cloudy/apollo_production_scripts/: create_cloudy_inputs.sh  create_cloudy_inputs_from_cloudy.sh  create_synthesizer_grid.sh  grids.txt  grids_.txt  incident.txt  incident_.txt
create_grids/cloudy/cloudy_incident_models/: agn.yaml  blackbody.yaml
create_grids/cloudy/params/: c17.03-blr.yaml  c17.03-nlr.yaml  c17.03-sps-alpha.yaml  c17.03-sps-fixed.yaml  c17.03-sps-fixedU-log10U.yaml  c17.03-sps-hydrogen_density.yaml  c17.03-sps-no_grains.yaml  c17.03-sps-plane_parallel.yaml  c17.03-sps.yaml  c17.03-sps_dust_to_metal.yaml  c17.03-sps_ionisation_parameter.yaml  c23.01-sps.yaml
create_grids/cloudy/scripts/: README.md  create_cloudy_inputs.job  create_cloudy_inputs.sh  create_synthesizer_grid.job  create_synthesizer_grid.sh  grids.txt  incident.txt  incident_.txt
create_grids/dust/: create_dl07_grid.py
create_grids/incident/: create_reduced_grid.py  incident_utils.py
create_grids/incident/blackholes/: agnsed-isotropic.py  agnsed.py  create_synthesizer_grid.py  emission_models.py  feltre16.py  utils.py
create_grids/incident/sps/: README.md  install_all.sh  install_bc03-2016.py  install_bc03.py  install_bpass2.2.1.py  install_bpass2.3.py  install_fsps.py  install_maraston.py  install_maraston11_pickles.py  install_maraston13.py  install_yggdrasil.py  utils.py
example_scripts/: README  install_fsps_variants.sh
example_scripts/cloudy/apollo_production_scripts/: create_cloudy_inputs.sh  grids.txt  grids_.txt  incident.txt
extras/: compare_grids.ipynb  create_test_grid.sh  download_grids.py  explore_grid.ipynb  plot_spectra.ipynb  rebin_grid.py
incident/blackholes/: emission_models.py
incident/sps/: generate_grid_bc03-2016.py  generate_grid_bc03.py  generate_grid_maraston.py  generate_grid_maraston11.py  generate_grid_maraston13.py
src/synthesizer-grids/: _version.py
src/synthesizer-grids/create_grids/cloudy/params/: c17.03-sps-comprehensive.yaml  c17.03-sps_hydrogen_density.yaml
src/synthesizer-grids/create_grids/incident/blackholes/: agnsed.py
src/synthesizer-grids/create_grids/incident/sps/: install_bc03.py  install_maraston.py  install_maraston13.py
src/synthesizer-grids/utilities/: grid_io.py
src/synthesizer_grids/: __init__.py  _version.py  grid_io.py  parser.py
src/synthesizer_grids/cloudy/: README.md  create_cloudy_input_grid.py  create_cloudy_input_grid_from_cloudy.py  create_single_cloudy_input.py  create_synthesizer_grid.py  run_cloudy.py  submission_scripts.py  utils.py
src/synthesizer_grids/cloudy/apollo_production_scripts/: create_cloudy_inputs.job
src/synthesizer_grids/cloudy/create_linelist/: README.md  convert.ipynb  create_linelist.ipynb  extract_spectra.ipynb
src/synthesizer_grids/cloudy/create_linelist/agn_standard/: 1.in  2.in  3.in  run.sh
src/synthesizer_grids/cloudy/create_linelist/agn_vacuum/: 1.in  2.in  3.in  run.sh
src/synthesizer_grids/cloudy/create_linelist/test/: 1.in  (+1 more)
src/synthesizer_grids/cloudy/params/: c17.03-sps-comprehensive.yaml  c17.03-sps-depletion_model:Gutkin2016.yaml  c17.03-sps-ionisation_parameter.yaml  c17.03-sps-no_grains.yaml  c17.03-sps-no_scaling.yaml  c17.03-sps.yaml  c17.03-sps_resolution:0.1.yaml  c23.01-blr-efrac:-2.yaml  c23.01-blr.yaml  c23.01-fixed-CO.yaml  c23.01-fixed-NO.yaml  c23.01-fixed-alpha_enhancement.yaml  c23.01-fixed-depletion_model:ClassicCloudy.yaml  c23.01-fixed-depletion_model:Gutkin2016.yaml  c23.01-fixed-depletion_model:None.yaml  c23.01-fixed-depletion_scale.yaml  c23.01-fixed-hydrogen_density.yaml  c23.01-fixed-ionisation_parameter.yaml  c23.01-fixed-no_abundance_scalings.yaml  c23.01-fixed-no_grain_scaling.yaml  c23.01-fixed-no_grains.yaml  c23.01-fixed-plane_parallel.yaml  c23.01-fixed.yaml  c23.01-nlr.yaml  c23.01-sps-alpha_enhancement.yaml  c23.01-sps-c17.03.yaml  c23.01-sps-comprehensive.yaml  c23.01-sps-depletion_model:ClassicCloudy.yaml  c23.01-sps-depletion_model:Gutkin2016.yaml  c23.01-sps-depletion_model:None.yaml  c23.01-sps-depletion_scale.yaml  c23.01-sps-fixed.yaml  c23.01-sps-grains:Orion.yaml  c23.01-sps-grid.yaml  c23.01-sps-grid_limited.yaml  c23.01-sps-hydrogen_density.yaml  c23.01-sps-ionisation_parameter.yaml  c23.01-sps-no_abundance_scalings.yaml  c23.01-sps-no_cosmic_rays.yaml  c23.01-sps-no_grains.yaml  (+4 more)
src/synthesizer_grids/create_grids/cloudy/: create_synthesizer_grid.py
src/synthesizer_grids/dust/: create_dl07_grid.py
src/synthesizer_grids/extras/: check_cloudy_runs.py  compare_grids.ipynb  download_grids.py  explore_grid.ipynb  plot_spectra.ipynb  rebin_grid.py
src/synthesizer_grids/incident/: create_reduced_grid.py  incident_utils.py
src/synthesizer_grids/incident/blackholes/: README.md  agnsed-isotropic.py  agnsed.py  emission_models.py  feltre16.py  install_agnsed.py  install_broken_power_law.py  install_qsosed.py  install_relagn.py  install_relqso.py  utils.py
src/synthesizer_grids/incident/sps/: README.md  install_bc03-2016.py  install_bc03.py  install_bpass2.2.1.py  install_bpass2.3.py  install_fsps.py  install_fsps_variable_imf.py  install_maraston.py  install_maraston05.py  install_maraston11.py  install_maraston11_pickles.py  install_maraston13.py  install_maraston24.py  install_yggdrasil.py  utils.py
src/synthesizer_grids/utilities/: __init__.py  grid_io.py  parser.py
utilities/: blackhole_utils.py  download_grids.py  generate_reduced_grid.py  grid_utils.py  rebin_grid.py
(+60 files in other folders)
